# kairos

./: .env  .env.example  .gitignore  .gitlab-ci.yml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LSTM_TRAINING.md  PERFORMANCE_REPORT.md  README.md  REFACTOR.md  REFACTOR_PLAN.md  REVIEW.md  SRC_REFACTOR.md  SUMMARY.md  build.rs  ml_strategy_config.json  plan.md  progress.md  publish-reports.sh  spec.md  training_config.json
app/: Cargo.toml  build.rs
app/src/: layout.rs  main.rs  window.rs
app/src/app/: globals.rs  messages.rs  mod.rs  services.rs  sidebar_view.rs  state.rs  subscriptions.rs  ticker_registry.rs  view.rs
app/src/app/backtest/: history.rs  mod.rs  persistence.rs
app/src/app/core/: globals.rs  mod.rs  subscriptions.rs
app/src/app/init/: bootstrap.rs  mod.rs  services.rs  ticker_registry.rs
app/src/app/layout/: dashboard.rs
app/src/app/state/: connections.rs  mod.rs  modals.rs  persistence.rs  services.rs  ui.rs
app/src/app/update/: backtest.rs  chart.rs  data_events.rs  download.rs  feeds.rs  menu_bar.rs  mod.rs  navigation.rs  options.rs  preferences.rs  replay.rs  shell.rs  updater.rs
app/src/app/view/: main.rs  mod.rs  sidebar.rs
app/src/chart/: mod.rs  update.rs
app/src/chart/candlestick/: candle.rs  footprint.rs  mod.rs  render.rs  studies.rs
app/src/chart/comparison/: legend.rs  line_widget.rs  mod.rs  render.rs  scene.rs  series.rs  types.rs
app/src/chart/core/: caches.rs  definition.rs  macros.rs  mod.rs  tokens.rs  traits.rs  view_state.rs
app/src/chart/drawing/: drawing.rs  hit_test.rs  manager.rs  mod.rs  point.rs  snap.rs
app/src/chart/heatmap/: data.rs  mod.rs  render.rs  studies.rs  trades.rs
app/src/chart/overlay/: crosshair.rs  gaps.rs  grid.rs  last_price.rs  mod.rs  ruler.rs  tooltip.rs
app/src/chart/perf/: lod.rs  mod.rs
app/src/chart/profile/: construct.rs  invalidate.rs  mod.rs  render.rs  replay.rs  studies.rs
app/src/chart/scale/: label.rs  linear.rs  mod.rs  timeseries.rs  x_axis.rs  y_axis.rs
app/src/chart/shared/: mod.rs  study_helper.rs
app/src/chart/study_renderer/: band.rs  bar.rs  chart_views.rs  coord.rs  draw_context.rs  footprint.rs  histogram.rs  iced_canvas.rs  levels.rs  line.rs  markers.rs  mod.rs  panel.rs  profile.rs  side_panel.rs  vbp.rs
app/src/components/: mod.rs
app/src/components/chrome/: menu_bar.rs  mod.rs  title_bar.rs
app/src/components/display/: empty_state.rs  key_value.rs  mod.rs  progress_bar.rs  status_dot.rs  toast.rs  tooltip.rs
app/src/components/form/: form_field.rs  form_row.rs  mod.rs  (+1 more)
app/src/config/: mod.rs  scale_factor.rs  secrets.rs  sidebar.rs  theme.rs  timezone.rs
app/src/drawing/: types.rs
app/src/infra/: logger.rs  mod.rs  platform.rs  secrets.rs  window.rs
app/src/layout/: mod.rs  persistence.rs  types.rs
app/src/modals/: connections.rs  layout.rs  mod.rs  preferences.rs  theme.rs  update.rs
app/src/persistence/: app_state.rs  layout.rs  loading.rs  mod.rs  persistence.rs  runtime.rs
app/src/screen/: mod.rs
app/src/services/: error.rs  mod.rs  replay.rs  trade_provider.rs  updater.rs  updater_install.rs
app/src/style/: animation.rs  button.rs  container.rs  mod.rs  palette.rs  slider.rs  theme.rs  theme_bridge.rs  tokens.rs
crates/ai/: Cargo.toml  README.md
crates/ai/src/: error.rs  event.rs  lib.rs  prompt.rs
crates/backtest/: Cargo.toml  README.md
crates/backtest/src/: lib.rs  prelude.rs
crates/cli/: Cargo.toml
crates/cli/src/: backtest.rs  download.rs  main.rs  ml.rs
crates/data/: Cargo.toml  README.md
crates/data/src/: error.rs  event.rs  lib.rs
crates/exchange/: Cargo.toml
crates/exchange/src/: error.rs  lib.rs  types.rs  util.rs
crates/kairos-ml/: CHANGELOG.md  Cargo.toml  README.md  RELEASE_CHECKLIST.md  build.rs
crates/kairos-ml/benches/: inference_benchmarks.rs
crates/kairos-ml/examples/: ml_strategy_backtest.rs  train_simple_model.rs
crates/kairos-ml/src/: lib.rs
crates/kairos-ml/tests/: edge_cases.rs  integration_phase1.rs  integration_phase2.rs  integration_phase3.rs  integration_phase4.rs
crates/script/: Cargo.toml  README.md
crates/script/src/: bridge.rs  compiler.rs  engine.rs  error.rs  lib.rs  limits.rs  loader.rs  manifest.rs  path.rs  registry.rs  study_adapter.rs
crates/study/: Cargo.toml  README.md
crates/study/src/: config.rs  error.rs  lib.rs  output.rs  prelude.rs  registry.rs  traits.rs
data/: Cargo.toml  README.md
data/src/: audio_config.rs  chart.rs  error_types.rs  lib.rs  panel_config.rs  tickers_table_config.rs
data/src/config/: color.rs  mod.rs  panel.rs  sidebar.rs  theme.rs  timezone.rs
data/src/domain/: aggregation.rs  chart.rs  chart_ui_types.rs  entities.rs  futures.rs  gex.rs  mod.rs  options.rs  panel.rs  types.rs
data/src/drawing/: mod.rs  types.rs
data/src/feed/: manager.rs  mod.rs  types.rs
data/src/repository/: composite.rs  mod.rs  traits.rs
data/src/secrets/: mod.rs
data/src/services/: cache_manager.rs  feed_merger.rs  gex_calculator.rs  market_data.rs  mod.rs  options_data.rs  replay_engine.rs
data/src/state/: app.rs  app_state.rs  chart_state.rs  downloaded_tickers.rs  layout.rs  layout_manager.rs  layout_types.rs  mod.rs  pane.rs  pane_config.rs  persistence.rs  replay_state.rs
data/src/util/: formatting.rs  logging.rs  mod.rs  path.rs  time.rs
exchange/: Cargo.toml  README.md
exchange/src/: config.rs  error.rs  lib.rs  types.rs  util.rs
exchange/src/adapter/: error.rs  event.rs  mod.rs  stream.rs
exchange/src/repository/: databento_depth.rs  databento_trades.rs  massive_chains.rs  massive_contracts.rs  massive_snapshots.rs  mod.rs  rithmic_depth.rs  rithmic_trades.rs
study/: Cargo.toml
study/src/: config.rs  error.rs  lib.rs  output.rs  registry.rs  traits.rs
study/src/momentum/: macd.rs  mod.rs  rsi.rs  stochastic.rs
study/src/orderflow/: big_trades.rs  imbalance.rs  mod.rs  poc.rs  value_area.rs  volume_profile.rs
study/src/trend/: ema.rs  sma.rs  vwap.rs
study/src/util/: math.rs  mod.rs  series.rs
study/src/volatility/: atr.rs  bollinger.rs
study/src/volume/: base.rs  cvd.rs  delta.rs  obv.rs
(+1169 files in other folders)
