[workspace]
members = ["app", "crates/*"]
default-members = ["app"]
resolver = "2"

[workspace.package]
edition = "2024"
homepage = "https://kairos.com"

[workspace.dependencies]
iced_futures = { version = "0.14.0" }
iced_core = { version = "0.14.0", features = ["serde"] }
chrono = { version = "0.4.40", default-features = false, features = ["serde", "now", "clock"] }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = "1.0.140"
log = { version = "0.4.22", features = ["std"] }
thiserror = "2.0.12"
palette = "0.7.6"
num-traits = "0.2.19"
rustc-hash = "2.1.1"
enum-map = "2.7.3"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
tokio = { version = "1.43", features = ["sync", "macros", "rt", "rt-multi-thread", "time", "fs", "net"] }
iced_anim = { version = "0.3", features = ["derive"] }

# Force vendored OpenSSL for cross-compilation (databento pulls in native-tls → openssl-sys)
openssl = { version = "0.10", features = ["vendored"] }
