[package]
name = "kairos"
version = "0.8.6"
readme = "../README.md"
license = "GPL-3.0-or-later"
description = "A native desktop charting platform for futures markets"
categories = ["finance", "visualization", "gui"]
edition.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
iced = { version = "0.14.0", default-features = false, features = [
    "wgpu",
    "tokio",
    "canvas",
    "sipper",
    "advanced",
    "unconditional-rendering",
    "crisp",
    "x11",
    "wayland",
] }
iced_core.workspace = true
iced_futures.workspace = true
chrono.workspace = true
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true
log.workspace = true
uuid.workspace = true
palette.workspace = true
num-traits.workspace = true
rustc-hash.workspace = true
enum-map.workspace = true
base64 = "0.22"
dirs-next = "2.0.0"
keyring = "3"
open = "5.3.2"
fern = "0.7.1"
tokio = { version = "1.43", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "fs"] }
futures = "0.3"

exchange = { version = "0.1.0", path = "../crates/exchange", package = "kairos-exchange" }
data = { version = "0.1.0", path = "../crates/data", package = "kairos-data" }
study = { version = "0.1.0", path = "../crates/study", package = "kairos-study" }
script = { version = "0.1.0", path = "../crates/script", package = "kairos-script" }

[build-dependencies]
winresource = "0.1"

[features]
debug = ["iced/hot"]
options = []
