[package]
name = "kairos"
version = "1.0.0"
readme = "../README.md"
license = "GPL-3.0-or-later"
description = "A native desktop charting platform for futures markets"
categories = ["finance", "visualization", "gui"]
edition.workspace = true
homepage.workspace = true

[dependencies]
iced = { version = "0.14.0", default-features = false, features = [
    "wgpu",
    "tokio",
    "canvas",
    "sipper",
    "advanced",
    "unconditional-rendering",
    "crisp",
    # Linux display server support (unused on Windows, kept for future cross-platform builds)
    "x11",
    "wayland",
] }
iced_core.workspace = true
iced_futures.workspace = true
chrono.workspace = true
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true
log.workspace = true
uuid.workspace = true
palette.workspace = true
num-traits.workspace = true
rustc-hash.workspace = true
enum-map.workspace = true
iced_anim.workspace = true
base64 = "0.22"
dirs-next = "2.0.0"
keyring = "3"
open = "5.3.2"
fern = { version = "0.7.1", features = ["colored"] }
tokio = { workspace = true }
futures = "0.3"
rfd = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
semver = "1"
sha2 = "0.10"
zip = { version = "2", default-features = false, features = ["deflate"] }
flate2 = "1"
tar = "0.4"

data = { version = "1.0.0", path = "../crates/data", package = "kairos-data" }
study = { version = "1.0.0", path = "../crates/study", package = "kairos-study" }
backtest = { version = "1.0.0", path = "../crates/backtest", package = "kairos-backtest" }
ai = { version = "1.0.0", path = "../crates/ai", package = "kairos-ai" }

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { workspace = true }

[build-dependencies]
winresource = "0.1"

[features]
debug = ["iced/hot"]
heatmap = ["data/heatmap"]
