[package]
name = "kairos-data"
description = "Data aggregation, indexing, and configuration utilities for Kairos"
version = "0.1.0"
license = "GPL-3.0-or-later"
edition.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
serde_json.workspace = true
serde.workspace = true
chrono.workspace = true
palette.workspace = true
enum-map.workspace = true
rustc-hash.workspace = true
uuid.workspace = true

log = { version = "0.4.22", default-features = true, features = ["std"] }
thiserror = { version = "2.0.12", default-features = true, features = ["std"] }
async-trait = "0.1"
tokio = { version = "1.43", features = ["sync", "macros", "rt-multi-thread", "time"] }
