[package]
name = "kairos-ai"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
data = { version = "0.1.0", path = "../data", package = "kairos-data" }
study = { version = "0.1.0", path = "../study", package = "kairos-study" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["sync", "time"] }
futures = "0.3"
