[package]
name = "kairos-ai"
description = "AI assistant engine for Kairos — domain types, streaming client, tool system, and prompt construction"
version = "0.9.5"
license = "GPL-3.0-or-later"
edition.workspace = true
homepage.workspace = true

[dependencies]
data = { version = "0.9.0", path = "../data", package = "kairos-data", default-features = false, features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures = "0.3"
