[package]
name = "kairos-backtest"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
kairos-data = { path = "../data" }
kairos-study = { path = "../study" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
log.workspace = true
thiserror.workspace = true
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
