[package]
name = "kairos-backtest"
description = "Event-driven backtesting engine for Kairos trading strategies"
version = "0.1.0"
license = "GPL-3.0-or-later"
edition.workspace = true
homepage.workspace = true

[dependencies]
kairos-data = { path = "../data" }
kairos-study = { path = "../study" }
serde.workspace = true
uuid.workspace = true
chrono.workspace = true
log.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
