[package]
name = "kairos-backtest"
description = "Event-driven backtesting engine for Kairos trading strategies"
version = "0.9.1"
license = "GPL-3.0-or-later"
edition.workspace = true
homepage.workspace = true

[dependencies]
kairos-data = { version = "0.9.0", path = "../data" }
kairos-study = { version = "0.9.0", path = "../study" }
serde.workspace = true
uuid.workspace = true
chrono.workspace = true
serde_json.workspace = true
log.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
