[package]
name = "kairos-data"
description = "Unified data infrastructure for Kairos — domain types, exchange adapters, caching, and the DataEngine facade"
version = "0.2.0"
license = "GPL-3.0-or-later"
edition.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = ["databento", "rithmic"]
databento = ["dep:databento", "dep:time", "dep:dirs-next"]
rithmic = ["dep:prost", "dep:tokio-tungstenite", "dep:futures-util", "dep:chrono-tz"]
heatmap = []

[dependencies]
# Core (always)
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
log = { version = "0.4.22", default-features = true, features = ["std"] }
thiserror = { version = "2.0.12", default-features = true, features = ["std"] }
uuid = { workspace = true }
rustc-hash = { workspace = true }
enum-map = { workspace = true }
tokio = { version = "1.43", features = ["sync", "macros", "rt-multi-thread", "time", "fs", "net"] }
async-trait = "0.1"
reqwest = { version = "0.12.9", default-features = false, features = ["json", "rustls-tls"] }
bincode = "1.3"
zstd = "0.13"
toml = "0.8"

# Databento (feature-gated)
databento = { version = "0.22", optional = true }
time = { version = "0.3", features = ["macros", "formatting", "parsing"], optional = true }
dirs-next = { version = "2.0", optional = true }

# Rithmic (feature-gated)
prost = { version = "0.13.5", optional = true }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"], optional = true }
futures-util = { version = "0.3.31", optional = true }
chrono-tz = { version = "0.10", optional = true }

[dev-dependencies]
tempfile = "3.8"
