[package]
name = "kairos-data"
description = "Unified data infrastructure for Kairos — domain types, exchange adapters, caching, and the DataEngine facade"
version = "0.9.9"
license = "GPL-3.0-or-later"
edition.workspace = true
homepage.workspace = true

[features]
default = ["databento", "rithmic"]
databento = ["dep:databento", "dep:time", "dep:dirs-next"]
rithmic = ["dep:prost", "dep:tokio-tungstenite", "dep:futures-util"]
heatmap = []

[dependencies]
# Core (always)
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
rustc-hash = { workspace = true }
enum-map = { workspace = true }
tokio = { workspace = true }
async-trait = "0.1"
reqwest = { version = "0.12.9", default-features = false, features = ["json", "rustls-tls", "gzip"] }
bincode = "1.3"
zstd = "0.13"

# Databento (feature-gated)
databento = { version = "0.22", optional = true }
time = { version = "0.3", features = ["macros", "formatting", "parsing"], optional = true }
dirs-next = { version = "2.0", optional = true }

# Rithmic (feature-gated)
prost = { version = "0.13.5", optional = true }
tokio-tungstenite = { version = "0.27.0", features = ["rustls-tls-native-roots"], optional = true }
futures-util = { version = "0.3.31", optional = true }
chrono-tz = "0.10"

[dev-dependencies]
tempfile = "3.8"
