[package]
name = "kairos-exchange"
description = "Exchange adapters (Databento, Rithmic, Massive) for market data in Kairos"
version = "0.1.0"
license = "GPL-3.0-or-later"
edition.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
thiserror.workspace = true
rustc-hash.workspace = true

tokio = { version = "1.43", default-features = false, features = ["rt", "macros", "fs", "net", "time", "sync"] }
reqwest = { version = "0.12.9", default-features = false, features = ["json", "rustls-tls"] }

# Databento integration
databento = "0.22"
time = { version = "0.3", features = ["macros", "formatting", "parsing"] }
dirs-next = "2.0"
toml = "0.8"
kairos-data = { path = "../data" }
async-trait = "0.1"

# Rithmic integration (protocol layer inlined from rithmic-rs)
prost = "0.13.5"
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
futures-util = "0.3.31"

# Massive (Polygon) integration
zstd = "0.13"

[dev-dependencies]
tempfile = "3.8"
