[package]
name = "kairos-study"
description = "Technical studies and indicators for Kairos charts"
version = "1.0.0"
license = "GPL-3.0-or-later"
edition.workspace = true
homepage.workspace = true

[dependencies]
data = { version = "1.0.0", path = "../data", package = "kairos-data" }
serde.workspace = true
serde_json.workspace = true
log.workspace = true
thiserror.workspace = true
chrono.workspace = true
bincode = "1.3"
zstd = "0.13"
